application/brennoflavio/endurain/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: endurain
spec:
    replicas: 1
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: valkey
                  image: valkey/valkey:8.1.8
                  ports:
                      - containerPort: 6379
                  readinessProbe:
                      exec:
                          command:
                              - valkey-cli
                              - ping
                      initialDelaySeconds: 5
                      periodSeconds: 5
                  resources:
                      requests:
                          cpu: 10m
                          memory: 16Mi
                      limits:
                          memory: 16Mi
