application/brennoflavio/endurain/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: postgres
    namespace: endurain
spec:
    type: ClusterIP
    selector:
        app: postgres
    ports:
        - protocol: TCP
          port: 5432
          targetPort: 5432
