application/brennoflavio/endurain/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: endurain
    namespace: endurain
spec:
    type: ClusterIP
    selector:
        app: endurain
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
